force-app/main/default/objects/Service_Message_Error_Log__c/Service_Message_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Service Message Error Log</label>
    <nameField>
        <displayFormat>ERR-{00000}</displayFormat>
        <label>Service Message Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Message Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>