force-app/main/default/objects/Service_Message_Error_Log__c/fields/Error_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Error_Line_Number__c</fullName>
    <description>Stores the line number of the method/class where the exception was raised.</description>
    <label>Error Line Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>