force-app/main/default/objects/Service_Message_Error_Log__c/fields/FS_CustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomCreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Message_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>