force-app/main/default/objects/Service_Message_Error_Log__c/fields/FS_CustomLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomLastModifiedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Message_Error_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>