force-app/main/default/objects/Service_Message_Error_Log__c/fields/FS_Serial_Number_Asset_Tag__c.field-meta.xml
<CustomField>
    <fullName>FS_Serial_Number_Asset_Tag__c</fullName>
    <description>This is the serial number of the Outlet Dispenser</description>
    <inlineHelpText>This is the serial number of the Outlet Dispenser</inlineHelpText>
    <label>Serial Number/Asset Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>