force-app/main/default/objects/Service_Message_Error_Log__c/fields/Outlet_ACN__c.field-meta.xml
<CustomField>
    <fullName>Outlet_ACN__c</fullName>
    <formula>Outlet_Dispenser__r.FS_ACN_NBR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet ACN</label>
    <type>Text</type>
</CustomField>