force-app/main/default/objects/Service_Message_Error_Log__c/fields/Outlet_Dispenser__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Dispenser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Dispenser</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>Service Message Error Logs</relationshipLabel>
    <relationshipName>Service_Message_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>