force-app/main/default/objects/Service_Message_Error_Log__c/fields/Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Name__c</fullName>
    <formula>Outlet_Dispenser__r.FS_Outlet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>