force-app/main/default/objects/Service_Message_Error_Log__c/fields/Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Request_Message__c</fullName>
    <label>Request Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>