force-app/main/default/objects/Service_Message_Error_Log__c/fields/Resend_Counter__c.field-meta.xml
<CustomField>
    <fullName>Resend_Counter__c</fullName>
    <label>Resend Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>