force-app/main/default/objects/Service_Message_Error_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>To store Response of http request</description>
    <label>Error Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>