force-app/main/default/objects/Service_Message_Error_Log__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>ServiceName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>