force-app/main/default/objects/Service_Message_Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF(Outlet_Dispenser__r.RecordType.DeveloperName= &#39;BoE_Dispenser&#39;,  TEXT(Outlet_Dispenser__r.FS_Model__c) , Outlet_Dispenser__r.FS_Equip_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>