force-app/main/default/objects/Service_Message_Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>FS_Serial_Number_Asset_Tag__c</columns>
    <columns>Outlet_ACN__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Outlet_Dispenser__c</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Resend__c</columns>
    <columns>Resend_Counter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resend__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>