force-app/main/default/objects/Service_Message_Error_Log__c/listViews/FET41_DM_errors.listView-meta.xml
<ListView>
    <fullName>FET41_DM_errors</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>FS_Serial_Number_Asset_Tag__c</columns>
    <columns>Outlet_ACN__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Outlet_Dispenser__c</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Resend__c</columns>
    <columns>Resend_Counter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>FET41 DM errors</label>
</ListView>