force-app/main/default/objects/Service_Message_Error_Log__c/listViews/Success_Report.listView-meta.xml
<ListView>
    <fullName>Success_Report</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Request_Message__c</columns>
    <columns>Resend__c</columns>
    <columns>FS_Serial_Number_Asset_Tag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/4/2016 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>4/5/2016 12:00 AM</value>
    </filters>
    <label>Success Report</label>
</ListView>