force-app/main/default/objects/Service_Message_Error_Log__c/listViews/Today_Failures.listView-meta.xml
<ListView>
    <fullName>Today_Failures</fullName>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>FS_Serial_Number_Asset_Tag__c</columns>
    <columns>Outlet_Name__c</columns>
    <columns>Outlet_ACN__c</columns>
    <columns>Outlet_Dispenser__c</columns>
    <columns>Request_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resend__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Failures</label>
</ListView>